@@ -1,3 +1,2 @@
 
-Nothing for now, but I'm sure there will be some soon.
-
+	* paxctl-ng: add file globbing
