@@ -1,3 +1,7 @@
+
+	* paxctl-ng: if a file fails to open O_RDWR then
+	don't do PT_PAX markings but continue with XT_PAX
+
 2011-10-23
 
 	* Release 0.3.0
